﻿1.0.0 (2015-08-12)
- initial release

1.0.1 (2015-08-13)
- improved logic

1.0.2 (2015-09-01)
- Fixed Livestreams

...

[B]Version 2.0.1  (03.11.2018)[/B] Original by PUR3 / Revised by realvito[CR]
- fixed: Livestreams werden NICHT gelistet
- fixed: Mehrfachstarts der Videos (Abspielmethode geändert)
- optimized: Qualität und Auflösung der Titel-Bilder maximiert, Fanart anzeigen

[B]Version 2.0.2  (23.02.2019)[/B] by realvito[CR]
- fixed: Livestreams werden NICHT abgespielt

[B]Version 2.0.3  (11.03.2019)[/B] by realvito[CR]
- added: DEBUG-LOG-Meldungen zur Fehlersuche eingebaut